# esp32-nesemu

./: .gitignore  README.rst  test.py
.github/workflows/: esp-build-firmware.yml  esp-build.yml  rp2040-build.yml
esp32/: CMakeLists.txt  flashrom.sh  partitions.csv  sdkconfig
esp32/components/ili9341/: CMakeLists.txt  Kconfig.projbuild  game_list.c  ili9341.c  ili9341.h
esp32/components/msc/: CMakeLists.txt  msc.c  msc.h
esp32/components/w25qxx/: CMakeLists.txt  Kconfig.projbuild  w25qxx.c  w25qxx.h
esp32/main/: CMakeLists.txt  idf_component.yml  main.c
esp32s2/: sdkconfig
esp32s2/components/msc/: CMakeLists.txt  msc.c  msc.h
esp32s2/components/serial/: CMakeLists.txt  serial.c  serial.h
esp32s2/components/w25qxx/: Kconfig.projbuild
esp32s2/main/: CMakeLists.txt  main.c
esp32s3/: sdkconfig
esp32s3/components/msc/: msc.c
esp32s3/components/w25qxx/: Kconfig.projbuild  w25qxx.c
esp32s3/main/: CMakeLists.txt  main.c
rp2040/: CMakeLists.txt
rp2040/components/: CMakeLists.txt
rp2040/components/ili9341/: CMakeLists.txt  font.c  ili9341.c  ili9341.h
rp2040/components/msc/: CMakeLists.txt  msc.c  msc.h
rp2040/components/w25qxx/: CMakeLists.txt  w25qxx.c  w25qxx.h
rp2040/main/: CMakeLists.txt  lv_conf.h  main.c  tusb_config.h  usb_descriptors.c
